sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: illegal start of simple expression
	    		var j = i;
                        ^AlgInsertionSort:7: error: illegal start of simple expression
	          while(j >=1 && plusPetit(j,j-1));
                                                  ^AlgInsertionSort:20: error: Unmatched closing brace '}' ignored here
}
^