sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var swapped = false;
	for (i<- 0 to getNombreValeurs()-1)
	    		var j = i;
	    		var value = getValeur(i+1)
	          while(j >=1 && plusPetit(j,j-1));
	    		{
                   copie(j,j-1)
	    		    j -=1;
                 }
               setValeur(j-1,value)
	    	}
}


